force-app/main/default/objects/WordMaster__c/WordMaster__c.object-meta.xml
<CustomObject>
    <label>帳票文言マスタ</label>
    <nameField>
        <label>帳票ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>