force-app/main/default/objects/WordMaster__c/fields/ANS_TEXT_Header__c.field-meta.xml
<CustomField>
    <fullName>ANS_TEXT_Header__c</fullName>
    <label>回答内容ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>