force-app/main/default/objects/WordMaster__c/fields/CallerPhoneNumberLabel__c.field-meta.xml
<CustomField>
    <fullName>CallerPhoneNumberLabel__c</fullName>
    <label>着信電話番号ラベル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>