force-app/main/default/objects/WordMaster__c/fields/ContactInformationHeader__c.field-meta.xml
<CustomField>
    <fullName>ContactInformationHeader__c</fullName>
    <label>入電者名情報ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>