force-app/main/default/objects/WordMaster__c/fields/ContactLabel__c.field-meta.xml
<CustomField>
    <fullName>ContactLabel__c</fullName>
    <label>入電者名ラベル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>