force-app/main/default/objects/WordMaster__c/fields/ContactNameHeader__c.field-meta.xml
<CustomField>
    <fullName>ContactNameHeader__c</fullName>
    <label>入電者名ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>