force-app/main/default/objects/WordMaster__c/fields/CreatedDateLabel__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateLabel__c</fullName>
    <label>受付日時ラベル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>