force-app/main/default/objects/WordMaster__c/fields/Detail1Header__c.field-meta.xml
<CustomField>
    <fullName>Detail1Header__c</fullName>
    <label>明細１ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>