force-app/main/default/objects/WordMaster__c/fields/Detail2Header__c.field-meta.xml
<CustomField>
    <fullName>Detail2Header__c</fullName>
    <label>明細２ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>