force-app/main/default/objects/WordMaster__c/fields/Detail3Header__c.field-meta.xml
<CustomField>
    <fullName>Detail3Header__c</fullName>
    <label>明細３ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>