force-app/main/default/objects/WordMaster__c/fields/DisplayWord1__c.field-meta.xml
<CustomField>
    <fullName>DisplayWord1__c</fullName>
    <label>表記1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>