force-app/main/default/objects/WordMaster__c/fields/FirstFeeTransDate__c.field-meta.xml
<CustomField>
    <fullName>FirstFeeTransDate__c</fullName>
    <label>初回保険料振替日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>