force-app/main/default/objects/WordMaster__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>