force-app/main/default/objects/WordMaster__c/fields/InsuranceItemHeader__c.field-meta.xml
<CustomField>
    <fullName>InsuranceItemHeader__c</fullName>
    <label>保険種目ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>