force-app/main/default/objects/WordMaster__c/fields/PrintHeader__c.field-meta.xml
<CustomField>
    <fullName>PrintHeader__c</fullName>
    <label>帳票ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>