force-app/main/default/objects/WordMaster__c/fields/PrintName__c.field-meta.xml
<CustomField>
    <fullName>PrintName__c</fullName>
    <label>帳票名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>