force-app/main/default/objects/WordMaster__c/fields/PrintSubHeader__c.field-meta.xml
<CustomField>
    <fullName>PrintSubHeader__c</fullName>
    <label>帳票サブヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>