force-app/main/default/objects/WordMaster__c/fields/PROB_TEXT_Header__c.field-meta.xml
<CustomField>
    <fullName>PROB_TEXT_Header__c</fullName>
    <label>案内内容ヘッダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>