force-app/main/default/objects/WordMaster__c/fields/ReceptionConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ReceptionConfirmDate__c</fullName>
    <label>お申込みを確認した日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>