force-app/main/default/objects/WordMaster__c/fields/SenderAddress__c.field-meta.xml
<CustomField>
    <fullName>SenderAddress__c</fullName>
    <label>発送元住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>