force-app/main/default/objects/WordMaster__c/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <label>発送元名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>