force-app/main/default/objects/WordMaster__c/fields/SenderPostalCode__c.field-meta.xml
<CustomField>
    <fullName>SenderPostalCode__c</fullName>
    <label>発送元郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>