force-app/main/default/objects/WordMaster__c/fields/SendFrom__c.field-meta.xml
<CustomField>
    <fullName>SendFrom__c</fullName>
    <label>送付元</label>
    <length>255</length>
    <type>Text</type>
</CustomField>