force-app/main/default/objects/WordMaster__c/fields/SendTo__c.field-meta.xml
<CustomField>
    <fullName>SendTo__c</fullName>
    <label>送付先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>