force-app/main/default/objects/WordMaster__c/fields/ShippingPersonName__c.field-meta.xml
<CustomField>
    <fullName>ShippingPersonName__c</fullName>
    <label>送付者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>