force-app/main/default/objects/WordMaster__c/fields/SiteName__c.field-meta.xml
<CustomField>
    <fullName>SiteName__c</fullName>
    <label>所管部門名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>