force-app/main/default/objects/WordMaster__c/fields/SitePhone__c.field-meta.xml
<CustomField>
    <fullName>SitePhone__c</fullName>
    <label>所管部門連絡先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>