force-app/main/default/objects/WordMaster__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>