force-app/main/default/objects/WordMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Header__c</columns>
    <columns>PROB_TEXT_Header__c</columns>
    <columns>ANS_TEXT_Header__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>